--- a/style.css
+++ b/style.css
@@ -255,12 +255,13 @@ footer a {
 
 
   .catchcopy {
-    font-size: 1.5em;
+    font-size: 1em;
     line-height: 1.4;
   }
 
   .app-card {
     margin: 10px 0;
+    margin-top: 10px;
     padding: 10px;
     font-size: 1em;
   }
@@ -289,5 +290,9 @@ footer a {
   display: block;
   margin: 10px auto;
 }
+
+ p {
+  font-size: 0.9em;
+ }
 
 }
