--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h3 {
 .site-header {
   background-color: white;
   width: 70%;
-  max-width: 700px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 0 0;
   text-align: center;
@@ -80,7 +80,12 @@ h3 {
 .genre-btn:nth-child(3) {
   transform: rotate(-2deg);
 }
-
+.genre-btn:nth-child(4) {
+  transform: rotate(2deg);
+}
+.genre-btn:nth-child(5) {
+  transform: rotate(-2deg);
+}
 
 .disabled-btn {
   transform: rotate(2deg);
